--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 
     <span id="resultado" style="margin-left: 10px;"></span>
 
+    <footer>
+        <p>Fórmula utilizada: mils = 0.665 * metros + 666 (aka la formula del diablo) </p>
+        <p>@ KrAkEN -sVs 2025-</p>
+    </footer>
+
     <script>
         function calcular() {
             const metros = parseFloat(document.getElementById('metros').value);
