--- a/index.html
+++ b/index.html
@@ -3,6 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>Calculadora de Mils</title>
+    <style>
+        body {
+            background-color: black;      
+            color: #4B5320;               
+            font-weight: bold;             
+            font-family: Arial, sans-serif;
+            padding: 20px;
+        }
+
+        input, button {
+            font-weight: bold;
+            font-size: 16px;
+            margin: 5px 0;
+        }
+
+        button {
+            cursor: pointer;
+            padding: 5px 10px;
+        }
+
+        footer {
+            margin-top: 20px;
+            font-size: 14px;
+        }
+    </style>
 </head>
 <body>
     <h2>Calculadora de Mils</h2>
@@ -14,7 +39,7 @@
     <span id="resultado" style="margin-left: 10px;"></span>
 
     <footer>
-        <p>Fórmula utilizada: mils = 0.665 * metros + 666 (aka la formula del diablo) </p>
+        <p>Fórmula utilizada: mils = 0.665 * metros + 666 (aka la formula del diablo)</p>
         <p>@ KrAkEN -sVs 2025-</p>
     </footer>
 
