--- a/index.html
+++ b/index.html
@@ -7,25 +7,44 @@
         body {
             background-color: black;      
             color: #4B5320;               
-            font-weight: bold;             
-            font-family: Arial, sans-serif;
+            font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             padding: 20px;
         }
 
-        input, button {
+        input {
             font-weight: bold;
             font-size: 16px;
-            margin: 5px 0;
+            margin-bottom: 10px;          
+            display: block;                
         }
 
         button {
-            cursor: pointer;
+            font-weight: bold;
+            font-size: 16px;
+            cursor:crosshair;
             padding: 5px 10px;
         }
+
+         #resultado {
+        margin-left: 10px;         
+        font-size: 28px;            
+        font-weight: bold;          
+        padding: 5px 10px;         
+        border: 2px solid red;
+        border-radius: 2px;        
+        background-color: white;  
+        min-width: 100px;           
+        text-align: center;          
+    }
 
         footer {
             margin-top: 20px;
             font-size: 14px;
+        }
+
+        .boton-resultado {
+            display: flex;
+            align-items: center;           
         }
     </style>
 </head>
@@ -34,9 +53,11 @@
 
     <label for="metros">Metros:</label>
     <input type="number" id="metros" step="any">
-    <button onclick="calcular()">Calcular</button>
 
-    <span id="resultado" style="margin-left: 10px;"></span>
+    <div class="boton-resultado">
+        <button onclick="calcular()">Calcular</button>
+        <span id="resultado"></span>
+    </div>
 
     <footer>
         <p>Fórmula utilizada: mils = 0.665 * metros + 666 (aka la formula del diablo)</p>
