--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         input {
             font-weight: bold;
             font-size: 16px;
-            margin-bottom: 10px;          
+            margin-bottom: 10px;   
+            margin-top: 10px;       
             display: block;                
         }
 
@@ -24,6 +25,7 @@
             cursor:crosshair;
             padding: 5px 10px;
         }
+
 
          #resultado {
         margin-left: 10px;         
@@ -51,7 +53,7 @@
 <body>
     <h2>Calculadora de Mils</h2>
 
-    <label for="metros">Metros:</label>
+    <label for="metros">Metros: </label>
     <input type="number" id="metros" step="any">
 
     <div class="boton-resultado">
