--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <footer>
         <p>Fórmula utilizada: mils = 0.665 * metros + 666 (aka la formula del diablo)</p>
-        <p>@ KrAkEN -sVs 2025-</p>
+        <p>@ KrAkEN -sVs- 2025</p>
     </footer>
 
     <script>
