--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
     </div>
 
     <footer>
-        <p>Formula utilizada: mils = 0.665 * metros + 666 (aka la formula del diablo)</p>
+        <p>Formula utilizada:</p>
+        <p>MILS = 0.665 * metros + 666 (aka la formula del diablo)</p>
+
         <p>@ KrAkEN -sVs- 2025</p>
     </footer>
 
