--- a/index.html
+++ b/index.html
@@ -2,85 +2,87 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Calculadora de Mils</title>
+
+    <link 
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
+        rel="stylesheet">
+
     <style>
         body {
-            background-color: black;      
-            color: #4B5320;               
-            font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            background-color: black;
+            color: #4B5320;
+            font-family: Impact, fantasy;
             padding: 20px;
         }
 
-        input {
-            font-weight: bold;
-            font-size: 16px;
-            margin-bottom: 10px;   
-            margin-top: 10px;       
-            display: block;                
+        #resultado {
+            font-size: 32px;
+            padding: 8px 12px;
+            border: 2px solid red;
+            border-radius: 6px;
+            background-color: white;
+            min-width: 120px;
+            text-align: center;
         }
 
-        button {
-            font-weight: bold;
-            font-size: 16px;
-            cursor:crosshair;
-            padding: 5px 10px;
-        }
-
-
-         #resultado {
-        margin-left: 10px;         
-        font-size: 28px;            
-        font-weight: bold;          
-        padding: 5px;         
-        border: 2px solid red;
-        border-radius: 2px;        
-        background-color: white;  
-        min-width: 100px;           
-        text-align: center;          
-    }
-
-        footer {
-            margin-top: 20px;
-            font-size: 14px;
-        }
-
-        .boton-resultado {
-            display: flex;
-            align-items: center;           
+        @media (max-width: 600px) {
+            h1 { font-size: 1.8rem; }
+            h2 { font-size: 1.3rem; }
+            #resultado { font-size: 28px; }
         }
     </style>
 </head>
 <body>
+
+<div class="container text-center mt-4">
+
     <h1>-sVs-</h1>
-    <h2>Calculadora de MILS</h2>
+    <h2 class="mb-4">Calculadora de MIL (Milliradian)</h2>
 
+    <div class="mb-4">
+        <label for="metros" class="form-label">Ingrese metros :</label>
 
-    <label for="metros">Metros : </label>
-    <input type="number" id="metros" step="any">
-
-    <div class="boton-resultado">
-        <button onclick="calcular()">Calcular</button>
-        <span id="resultado"></span>
+        <input type="number" id="metros" step="any"
+               class="form-control mx-auto"
+               style="max-width: 300px;">
     </div>
 
-    <footer>
-        <p>Formula utilizada:</p>
-        <p>MILS = 0.665 * metros + 666 (aka la formula del diablo)</p>
+    <div class="d-flex justify-content-center align-items-center gap-3 mt-3 flex-wrap">
+        <button class="btn btn-danger px-4 py-2"
+                style="font-size: 18px;"
+                onclick="calcular()">
+            Calcular
+        </button>
 
+        <span id="resultado" class="mt-3 mt-sm-0"></span>
+    </div>
+
+    <footer class="mt-4">
+        <p>Formula utilizada:</p>
+        <p>MILS = 0.665 * metros + 666</p>
         <p>@ KrAkEN -sVs- 2025</p>
     </footer>
 
-    <script>
-        function calcular() {
-            const metros = parseFloat(document.getElementById('metros').value);
-            if (isNaN(metros)) {
-                document.getElementById('resultado').textContent = "Ingrese un numero valido soldado";
-                return;
-            }
-            const mils = 0.665 * metros + 666;
-            document.getElementById('resultado').textContent = mils.toFixed(2);
+</div>
 
-        }
-    </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+<script>
+function calcular() {
+    const metros = parseFloat(document.getElementById('metros').value);
+
+    if (isNaN(metros)) {
+        document.getElementById('resultado').textContent =
+            "Ingrese un numero valido soldado";
+        return;
+    }
+
+    const mils = 0.665 * metros + 666;
+    document.getElementById('resultado').textContent = mils.toFixed(2);
+}
+</script>
+
 </body>
 </html>
