--- a/index.html
+++ b/index.html
@@ -11,12 +11,25 @@
 
     <style>
         body {
-            background-color: black;
-            color: #4B5320;
-            font-family: Impact, fantasy;
-            padding: 20px;
+        background-image: url("BG.jpg");
+        background-size:contain;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-color: black;
+        color: black;
+        font-family: Impact, fantasy;
+        padding: 20px;
+         text-shadow:
+        -1px -1px 0 #fff,
+         1px -1px 0 #fff,
+        -1px  1px 0 #fff,
+         1px  1px 0 #fff;
         }
 
+
+
+        
         #resultado {
             font-size: 32px;
             padding: 8px 12px;
@@ -26,6 +39,7 @@
             min-width: 120px;
             text-align: center;
         }
+
 
         @media (max-width: 600px) {
             h1 { font-size: 1.8rem; }
@@ -67,7 +81,6 @@
 
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
 function calcular() {
