ajustando htmlsin1background

--- a/index.html
+++ b/index.html
@@ -11,13 +11,8 @@
 
     <style>
         body {
-        background-image: url("BG.jpg");
-        background-size:contain;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-attachment: fixed;
         background-color: black;
-        color: black;
+        color: green;
         font-family: Impact, fantasy;
         padding: 20px;
          text-shadow:
