ajustando htmlsin1backgrounkd

--- a/index.html
+++ b/index.html
@@ -12,14 +12,10 @@
     <style>
         body {
         background-color: black;
-        color: green;
+        color: #4B5320;
         font-family: Impact, fantasy;
         padding: 20px;
-         text-shadow:
-        -1px -1px 0 #fff,
-         1px -1px 0 #fff,
-        -1px  1px 0 #fff,
-         1px  1px 0 #fff;
+
         }
 
 
