ajustando htmlsin1backgrounkEd

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ function calcular() {
     }
 
     const mils = 0.665 * metros + 666;
-    document.getElementById('resultado').textContent = mils.toFixed(2);
+    document.getElementById('resultado').textContent = mils.toFixed(2) + "  MILS";
 }
 </script>
 
